Changelog for s6-rc.

In 0.4.1.0
----------

 - Support for max-death-tally and down-signal files in a
longrun definition directory


In 0.4.0.1
----------

 - Improved portability to (guess what) OpenBSD


In 0.4.0.0
----------

 - s6-rc-compile now accepts several producers in a consumer-for file.
All the producers for a service will write to the same pipe. In other
words: pipelines are now funnels.
 - The pipeline-name file, defining the name of a bundle containing
all the services in a pipeline, must now be place in the definition
directory of the last consumer in the pipeline, instead of the definition
directory of the first producer (since the latter is not unique
anymore).
 - All service databases must be edited and recompiled.
 - New tool: s6-rc-format-upgrade, to handle the upgrade to the new
compiled format.


In 0.3.0.0
----------

 - s6-rc-init now takes a -p option that adds a prefix to the symbolic links
created in the scandir to manage longruns. This allows the user to use the
same scandir for several s6-rc databases and live directories without risking
conflicts, if the prefixes are unique enough.
 - s6-rc-update does not use random number generation anymore, so it does
not block at boot time.
 - Bugfixes.

 Despite this being a major version release, the compiled service databases
did not change formats; you do not need to recompile your service databases.


In 0.2.1.2
----------

 - Bugfix release.
 - s6-rc's verbosity has been adjusted. (-v2 is less verbose, -v3 is
what the previous -v2 was, -v4 is still extremely verbose.)


In 0.2.1.1
----------

 - Bugfix release.


In 0.2.1.0
----------

 - Timeouts for oneshots have been increased to 30 seconds.
 - s6-rc now sends an explicit "s6-svc -d" to a longrun when an
up transition fails.
 - s6-rc now kills subprocesses waiting on longrun transitions
when it receives a SIGINT or a SIGTERM.
   + Those two changes combined ensure that a user can interrupt