@@ -6,7 +6,7 @@ Build Instructions
 
   - A POSIX-compliant C development environment
   - GNU make version 3.81 or later
-  - skalibs version 2.6.4.0 or later: http://skarnet.org/software/skalibs/
+  - skalibs version 2.7.0.0 or later: http://skarnet.org/software/skalibs/
   - execline version 2.5.0.0 or later: http://skarnet.org/software/execline/
   - s6 version 2.7.2.0 or later: http://skarnet.org/software/s6/
 
