@@ -48,7 +48,7 @@ scripts are also run in a controlled environment.
  <li> A POSIX-compliant system with a standard C development environment </li>
  <li> GNU make, version 3.81 or later </li>
  <li> <a href="//skarnet.org/software/skalibs/">skalibs</a> version
-2.6.4.0 or later </li>
+2.7.0.0 or later </li>
  <li> <a href="//skarnet.org/software/execline/">execline</a> version
 2.5.0.0 or later </li>
  <li> <a href="//skarnet.org/software/s6/">s6</a> version
