@@ -33,6 +33,8 @@ minor and bugfix version changes.
 <h2> in 0.4.1.0 </h2>
 
 <ul>
+ <li> <a href="//skarnet.org/software/skalibs/">skalibs</a>
+dependency bumped to 2.7.0.0. </li>
  <li> <a href="//skarnet.org/software/execline/">execline</a>
 dependency bumped to 2.5.0.0. </li>
  <li> <a href="//skarnet.org/software/s6/">s6</a>
